# GrooveJr

./: .gitignore  README.md  debug.sh  lldb_output.txt  run_lldb.sh
src/: AppState.cpp  AppState.h  CMakeLists.txt  Logging.cpp  Logging.h  Paths.h  main.cpp  main.h
src/actors/: ActorIds.h  AppStateManager.h  AudioThread.h  AudioThreadId.cpp  AudioThreadId.h  AudioThreadStatics.cpp  AudioThreadStatics.h  Display.h  EffectsManager.h  MusicLibraryManager.h  Playback.h  Supervisor.h
src/audio/: AudioCore.h  AudioData.h  AudioDeck.h  AudioPlayer.h  BufferIndeces.h  CMakeLists.txt  Cassette.cpp  Cassette.h  Channel.h  ChannelAtomic.h  ChannelSettings.h  Constants.h  DeckData.h  JackClient.cpp  JackClient.h  Logging.cpp  Logging.h  Mixer.cpp  Mixer.h  ProcessDataChangeFlag.h  ThreadStatics.cpp  ThreadStatics.h  audio.cpp  audio.h  audio_data.h  caf_data.h  constants.h  sf_info_reader.h
src/audio/effects/: Channel.cpp  Channel.h  EffectChannel.cpp  EffectChannel.h  EffectMixer.cpp  EffectMixer.h  EffectsChannel.cpp  EffectsChannel.h  EffectsChannelProcessData.h
src/audio/effects/vst3/: Plugin.cpp  Plugin.h  Util.h
src/audio/engine/: AudioCore.h  AudioDeck.h  AudioPlayer.h  BufferIndeces.h  Cassette.cpp  Cassette.h  JackClient.cpp  JackClient.h  Math.h
src/audio/mixer/: Channel.cpp  Channel.h  ChannelProcessData.h  ChannelSettings.h  Core.cpp  Core.h
src/audio/plugins/vst3/: Plugin.cpp  Plugin.h  Util.h
src/db/: CMakeLists.txt  Cache.cpp  Cache.h  Dao.cpp  Dao.h  Database.cpp  Database.h  Logging.cpp  Logging.h  Types.h  init.sql
src/db/decorate/musicLibrary/: TrackDecorate.cpp  TrackDecorate.h
src/db/dto/musicLibrary/: AlbumWithArtist.h  DecoratedAudioFile.cpp  DecoratedAudioFile.h  GenreWithTrackId.h  TrackDecoratedDto.cpp  TrackDecoratedDto.h
src/db/entity/: AppState.cpp  AppState.h  AppStateEntity.cpp  AppStateEntity.h  ChannelEntity.cpp  ChannelEntity.h  Effect.cpp  Effect.h  Scene.cpp  Scene.h  Track.cpp  Track.h
src/db/entity/mixer/: ChannelEntity.cpp  ChannelEntity.h  Effect.cpp  Effect.h  Plugin.cpp  Plugin.h  Scene.cpp  Scene.h
src/db/entity/musicLibrary/: Album.cpp  Album.h  Artist.cpp  Artist.h  AudioFile.cpp  AudioFile.h  Cache.h  Genre.cpp  Genre.h  MusicLibraryEntity.h  Playlist.cpp  Playlist.h  Queue.cpp  Queue.h  Track.cpp  Track.h
src/db/repository/: AppStateRepository.cpp  AppStateRepository.h  ChannelRepository.cpp  ChannelRepository.h  EffectRepository.cpp  EffectRepository.h  SceneRepository.cpp  SceneRepository.h  TrackRepository.cpp  TrackRepository.h
src/db/repository/mixer/: ChannelRepository.cpp  ChannelRepository.h  EffectRepository.cpp  EffectRepository.h  PluginRepository.cpp  PluginRepository.h  SceneRepository.cpp  SceneRepository.h
src/db/repository/musicLibrary/: AlbumRepository.cpp  AlbumRepository.h  ArtistRepository.cpp  ArtistRepository.h  AudioFileRepository.cpp  AudioFileRepository.h  CacheRepository.cpp  CacheRepository.h  GenreRepository.cpp  GenreRepository.h  MusicLibraryRepository.h  PlaylistRepository.cpp  PlaylistRepository.h  QueueRepository.cpp  QueueRepository.h  TrackRepository.cpp  TrackRepository.h
src/enums/: AudioCodec.h  PlayState.h  Result.h
src/gui/: CMakeLists.txt  Color.h  Hydrater.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  TransportControl.cpp  TransportControl.h
src/gui/MainToolBar/: CurrentlyPlaying.cpp  CurrentlyPlaying.h  MainToolBar.cpp  MainToolBar.h  ProgressBar.cpp  ProgressBar.h  SceneSelect.cpp  SceneSelect.h  TransportControl.cpp  TransportControl.h  TransportControlButton.h
src/gui/MainToolBar/eq/: EqGraph.cpp  EqGraph.h  EqGraphWorker.cpp  EqGraphWorker.h
src/gui/MainToolBar/scenes/: SceneButton.cpp  SceneButton.h  SceneSaveButton.cpp  SceneSaveButton.h  SceneSelectButton.cpp  SceneSelectButton.h  Scenes.cpp  Scenes.h  ScenesQueryModel.cpp  ScenesQueryModel.h  ScenesTableView.h
src/gui/MainToolBar/transport/: CrossfadeSlider.cpp  CrossfadeSlider.h  PlaybackSpeedSlider.cpp  PlaybackSpeedSlider.h  ProgressBar.cpp  ProgressBar.h  TransportControl.cpp  TransportControl.h  TransportControlButton.cpp  TransportControlButton.h
src/gui/MenuBar/: FileMenu.cpp  FileMenu.h  MenuBar.cpp  MenuBar.h
src/gui/MenuBar/Menus/: EffectsMenu.cpp  EffectsMenu.h  FileMenu.cpp  FileMenu.h  MusicMenu.cpp  MusicMenu.h
src/gui/Mixer/: Body.cpp  Body.h  Channel.cpp  Channel.h  MixerWindow.cpp  MixerWindow.h
src/gui/Mixer/Channel/: DryChannel.cpp  DryChannel.h  MainChannelContainer.cpp  MainChannelContainer.h  MainDryContainer.cpp  MainDryContainer.h  MuteButton.cpp  MuteButton.h  SoloButton.cpp  SoloButton.h
src/gui/Mixer/Channels/: AddChannelButton.cpp  AddChannelButton.h  ChannelsContainer.cpp  ChannelsContainer.h  MainChannelContainer.cpp  MainChannelContainer.h
src/gui/MusicLibrary/: Constants.h  GjQueryModel.h  MusicLibraryFilters.h  MusicLibraryQueryModel.h  MusicLibraryTableView.h  MusicLibraryType.h  MusicLibraryWindow.cpp  MusicLibraryWindow.h  Tracks.cpp  Tracks.h
src/gui/QSql/: SqlQueryModel.cpp  SqlQueryModel.h  SqlTableView.cpp  SqlTableView.h  SqlWorker.cpp  SqlWorker.h  SqlWorkerPool.cpp  SqlWorkerPool.h  SqlWorkerPoolClient.cpp  SqlWorkerPoolClient.h  SqlWorkerPoolHost.cpp  SqlWorkerPoolHost.h  WorkerPool.cpp  WorkerPool.h
src/gui/Shared/: DirectorySelect.cpp  DirectorySelect.h  VstSelect.cpp  VstSelect.h
src/gui/TransportControl/: CurrentlyPlaying.cpp  CurrentlyPlaying.h  TransportControl.cpp  TransportControl.h
src/messaging/: DecksState.h  EnvelopeQtPtr.h  atoms.h
src/resource/: GrooveJr.rc  Info.plist.in  resources.qrc
src/resource/icons/: GrooveJr.icns
src/scanner/: CMakeLists.txt  Logging.cpp  Logging.h  Scanner.cpp  Scanner.h
src/state/: AppState.cpp  AppState.h  Core.cpp  Core.h  Packet.h
src/state/audio/: CoreShadow.h  DeckShadow.h
src/state/mixer/: ChannelPacket.h  Packet.h  PluginPacket.h  PluginSlotPacket.h
src/tests/: CMakeLists.txt  e2e_qtest.cpp  test_atomic_str.cpp  test_color.cpp  test_entities.cpp  test_math.cpp  test_paths.cpp  test_playstate.cpp
src/tests/e2e/: tst_e2e.cpp
src/types/: AtomicStr.h  Types.h
(+172 files in other folders)
